# typing_refined

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: check-release.sh
src/typing_refined/: __init__.py  batteries.py  classes.py  consumer_validate.py  predicates.py
tests/: test_exercise.py  test_exercise_batteries.py
