[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "typing_refined"
version = "0.1.0"
description = "Refined typing utilities for Python."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
]
authors = [
    { name = "Ian McEwan", email = "ijm567+py@gmail.com" },
]
keywords = ["typing", "refined", "types"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ijm/typing_refined"
Repository = "https://github.com/ijm/typing_refined"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "mypy>=1",
    "ruff>=0.9",
]

[tool.setuptools.package-data]
typing_refined = ["py.typed"]

[tool.pyright]
typeCheckingMode = "strict"  # "basic" "standard" or "strict"
